fix bug that woudl cause summary component to bleed into email signup section

--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -52,8 +52,8 @@
         "title title"
         "discount discount"
     ;
-    height: 15rem;
     margin-right: 2rem;
+    margin-bottom: 2rem;
 }
 
 .summaryTitle {
