--- a/src/components/Signup/Signup.module.css
+++ b/src/components/Signup/Signup.module.css
@@ -4,6 +4,7 @@
     gap: 1rem;
     justify-content: center;
     padding: 2rem 0 2rem 0;
+    background-color: rgba(228, 228, 228, 0.499);
 }
 
 .input {
